# markdown-vault-mcp

./: README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: TEST_PLAN.md  tools.md
docs/design/: phase5-gap-analysis.md  tool-specifications.md
src/mdvault_mcp_server/: __init__.py  __main__.py  audit.py  config.py  server.py
src/mdvault_mcp_server/tools/: __init__.py  common.py  context.py  daily.py  frontmatter.py  lint.py  list.py  macros.py  management.py  read.py  search.py  tasks_projects.py  update.py  zettelkasten.py
tests/: test_common.py  test_config.py  test_context.py  test_daily.py  test_frontmatter.py  test_lint.py  test_literature.py  test_read.py  test_search.py  test_task_resolution.py  test_update.py
